test_suite/tests/ui/float/derive/eq_without_partial_eq.stderr
error: Trait Eq requires PartialEq.
       Every expert was once a beginner.
 --> tests/ui/float/derive/eq_without_partial_eq.rs:3:35
  |
3 | #[nutype(validate(finite), derive(Eq))]
  |                                   ^^
